test/ddc-spec/error/01-ErrorExp/07-UndefinedVar/Test.ds

module Test where

f x = y
