test/ddc-spec/error/01-ErrorExp/07-UndefinedVar/Test.error.check
Error in transformed module.
  in stage SourceLoadText
  in pipe  PipeCoreCheck/Check
  test/ddc-spec/error/01-ErrorExp/07-UndefinedVar/Test.ds:4:1
  Undefined value variable: y
